--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=KoHooHo:wght@400;700&display=swap" rel="stylesheet">
     <title>Restaurant Apps</title>
 </head>
 
 <body>
+    <!-- navbar -->
     <div class="nav">
         <div class="nav-responsive">
             <a id="menu" class="nav-menu">☰</a>
@@ -17,11 +20,23 @@
             <ul>
                 <li class="nav_item"><a href="#">Home</a></li>
                 <li class="nav_item"><a href="#">Favorite</a></li>
-                <li class="nav_item"><a href="#">About Us</a></li>
+                <li class="nav_item"><a href="https://www.linkedin.com/in/fadel-muhammad-bb16431b5/" target="_blank">About Us</a></li>
             </ul>
         </div>
     </div>
-    <img src="./images/heros/hero-image_1.jpg" width="300px">
+    
+    <!-- hero -->
+    <div class="hero">
+        <img src="./images/heros/hero-image_2.jpg" alt="gambar makanan">
+        <div class="caption">
+            <h1>welcome</h1>
+            <p>nikmati berbagai masakan yang ada di indonesia.</p>
+        </div>
+    </div>
+
+
+
+
 </body>
 
 </html>
