--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,9 +3,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'KoHo', sans-serif;;
 }
 
-/* nav */
+/* navbar */
 .nav-menu{
     font-size: 40px;
     width: 30px;
@@ -13,13 +14,11 @@
     display: block;
     margin: auto;
 }
-
 .nav{
-    background-color: #2b5161ff;
+    background-color: rgb(116, 124, 126);
     width: 100%;
     height: 70px;
 }
-
 .content{
     display: flex;
     justify-content: space-between;
@@ -27,19 +26,38 @@
     line-height: 70px;
     margin: 0 100px;
 }
-
 .content img{
-    width: 20px;
+    width: 40px;
 }
-
 .content li{
     display: inline-block;
     letter-spacing: 2px;
     font-weight: 500;
     margin-left: 10px;
 }
-
 .content a{
     text-decoration: none;
     color: white;
+}
+
+/* hero */
+.hero img{
+    position: relative;
+    width: 100%;
+}
+.caption{
+    position: absolute;
+    top: 20vw;
+    left: 30%;
+    right: 30%;
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+.caption h1{
+    font-size: 8vw;
+    font-weight: 700;
+}
+.caption p{
+    font-size: 2vw;
+    font-weight: 500;
 }
