--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -1,3 +1,4 @@
+/* navbar */
 @media screen and (max-width: 520px) {
     .content{
         top: 70px;
@@ -20,8 +21,8 @@
     }
     .nav_item {
         display: list-item;
-        border-bottom: 1px solid #b3b1b1;
-        width: 100%;
+        border-bottom: 1px solid #cecece;
+        width: 90%;
         text-align: left;
     }
 }
