--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=KoHooHo:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=KoHooHo:wght@400;700&display=swap" rel="stylesheet">
     <title>Restaurant Apps</title>
 </head>
 
@@ -16,18 +16,19 @@
     <!-- navbar -->
     <div class="nav">
         <div class="nav-responsive">
-            <a id="menu" class="nav-menu">☰</a>
+            <a id="menu" class="nav-menu" href="#">☰</a>
         </div>
         <div class="content" id="content-responsive">
-            <img src="./images/heros/logo.png" alt="logo" tabindex="0">
             <ul>
                 <li class="nav_item"><a href="index.html">Home</a></li>
                 <li class="nav_item"><a href="#">Favorite</a></li>
-                <li class="nav_item"><a href="https://www.linkedin.com/in/fadel-muhammad-bb16431b5/" target="_blank">About Us</a></li>
+                <li class="nav_item"><a href="https://www.linkedin.com/in/fadel-muhammad-bb16431b5/"
+                        target="_blank">About Us</a></li>
             </ul>
         </div>
+        <img src="./images/heros/logo.png" alt="logo" tabindex="0">
     </div>
-    
+
     <!-- hero -->
     <div class="hero">
         <img src="./images/heros/hero-image_2.jpg" alt="gambar makanan" tabindex="0">
