--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,21 +25,25 @@
     color: white;
     display: block;
     margin: auto;
+    text-decoration: none;
 }
 .nav{
     background-color: rgb(116, 124, 126);
     width: 100%;
     height: 70px;
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
 }
 .content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     line-height: 70px;
-    margin: 0 100px;
+    margin-left: 100px;
 }
-.content img{
-    width: 40px;
+.nav img{
+    width: 50px;
+    height: 50px;
+    display: block;
+    margin-right: 100px;
 }
 .content li{
     display: inline-block;
@@ -88,19 +92,19 @@
 }
 .card{
     background-color: rgb(245, 241, 228);
-    border-radius: 10px;
+    border-radius: 20px;
     margin: 10px;
     flex-basis: 20%;
+    
 }
 
 .card img{
-    width: 380px;
+    width: 300px;
     height: 200px;
     display: block;
     margin: auto;
     border-radius: 5px;
 }
-
 .card h6{
     color: rgb(0, 0, 0);
     font-size: 30px;
@@ -119,7 +123,6 @@
 
 .card p{
     margin: 10px 20px;
-    width: 400px;
     text-align: justify;
 }
 
